update the comments